--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Thymeleaf-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
