--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# 修改服务器端口
+server.port=8888
+
 # mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ossd?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.username=root
@@ -9,3 +12,10 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+#文件路径
+user.file.path=F:/img/
+user.file.name=springboot.jpg
