解决无法访问html问题：原因是springboot版本问题。实现图片、文件、视频上传功能。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # Thymeleaf
 spring.thymeleaf.cache=false
 
-#文件路径
-user.file.path=F:/img/
-user.file.name=springboot.jpg
+# 上传文件总的最大值
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
+# Person pit
+PersonPit.addr = D:/Pit/
+# src/main/resources/static/PersonPit/
