实现课程管理、查看课程功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,8 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 # Person pit
-PersonPit.addr = D:/Pit/
-# src/main/resources/static/PersonPit/
+PersonPit.addr = D:/OSSD/PersonPit
+# Course video
+CourseVideo.addr = D:/OSSD/CourseVideo
+# Course File
+CourseBook.addr = D:/0SSD/CourseFile
