--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,13 @@ PersonPit.addr = D:/OSSD/PersonPit
 CourseVideo.addr = D:/OSSD/CourseVideo
 # Course File
 CourseBook.addr = D:/0SSD/CourseFile
+
+# 热部署生效
+spring.devtools.restart.enabled=true
+# 设置需要重启的目录
+spring.devtools.restart.additional-paths=src/java/main
+# 设置不需要重启的目录
+spring.devtools.restart.exclude=static/**,public/**,WEB-INF/**
+# 为 mybatis 设置，生产环境可删除
+# restart.include.mapper=/mapper-[\\w-\\.]+jar
+# restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
