与前端对接教师管理系统

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,12 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder = trace
 
 # Hikari 连接池配置
-hikari.max-lifetime = 1800000  # 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+# 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+hikari.max-lifetime = 1800000
+## 最小空闲连接数量
+spring.datasource.hikari.minimum-idle=5
+## 连接池最大连接数，默认是10
+spring.datasource.hikari.maximum-pool-size=10
 
 # Thymeleaf
 spring.thymeleaf.cache=false
@@ -24,7 +29,7 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 # Person pit
-PersonPit.addr = D:/OSSD/PersonPit
+PersonPit.addr = D:/OSSD/PersonPit/
 # Course video
 CourseVideo.addr = D:/OSSD/CourseVideo
 # Course File
